--- a/index.html
+++ b/index.html
@@ -22,5 +22,17 @@
         </nav>
     </header>
     
+    <main>
+        <section id="DSMovie-card-list" class = "container">
+            <div class="DSMovie-card">
+                <img src="https://www.themoviedb.org/t/p/original/oa2gIzDwZ5weyZea5iXPLrQ7leN.jpg" alt=" Vikings">
+                <div class="DSMovie-card-description">
+                    <h3>Vikings</h3>
+                    <a class="DSMovie-btn" href="form.html">Avaliar</a>
+                </div>
+            </div>
+        </section>
+    </main>
+
 </body>
 </html>
