Listagem de Cards

--- a/index.html
+++ b/index.html
@@ -24,13 +24,119 @@
     
     <main>
         <section id="DSMovie-card-list" class = "container">
-            <div class="DSMovie-card">
-                <img src="https://www.themoviedb.org/t/p/original/oa2gIzDwZ5weyZea5iXPLrQ7leN.jpg" alt=" Vikings">
-                <div class="DSMovie-card-description">
-                    <h3>Vikings</h3>
-                    <a class="DSMovie-btn" href="form.html">Avaliar</a>
+
+            <div class="row">
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="DSMovie-card">
+                        <img src="https://www.themoviedb.org/t/p/original/oa2gIzDwZ5weyZea5iXPLrQ7leN.jpg" alt="Vikings">
+                        <div class="DSMovie-card-description">
+                            <h3>Vikings</h3>
+                            <a class="DSMovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="DSMovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/wiE9doxiLwq3WCGamDIOb2PqBqc.jpg" alt="Peaky Blinders: Sangue, Apostas e Navalhas">
+                        <div class="DSMovie-card-description">
+                            <h3>Peaky Blinders: Sangue, Apostas e Navalhas</h3>
+                            <a class="DSMovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="DSMovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/ccaZ3yyyC6rcMAQrlLZ51FpahNO.jpg" alt="Lucifer">
+                        <div class="DSMovie-card-description">
+                            <h3>Lucifer</h3>
+                            <a class="DSMovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="DSMovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/aSYmp0TJW9Qvo6uoNjxyWYC4Xy4.jpg" alt="Suits">
+                        <div class="DSMovie-card-description">
+                            <h3>Suits: Homens de Terno</h3>
+                            <a class="DSMovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="DSMovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/wbfg0y8Ptk472rLa9e3TTO9XVNh.jpg" alt="Breaking Bad">
+                        <div class="DSMovie-card-description">
+                            <h3>Breaking Bad: A Química do Mal</h3>
+                            <a class="DSMovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="DSMovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/8SW0H1rF614O7NTAXZzoZ9BKBsB.jpg" alt="Jujutsu Kaisen">
+                        <div class="DSMovie-card-description">
+                            <h3>Jujutsu Kaisen</h3>
+                            <a class="DSMovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="DSMovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/2j4T7JYorVX4oIknGsfis03NFE6.jpg" alt="Attack on Titan">
+                        <div class="DSMovie-card-description">
+                            <h3>Attack on Titan</h3>
+                            <a class="DSMovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="DSMovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/mGVrXeIjyecj6TKmwPVpHlscEmw.jpg" alt="The Boys">
+                        <div class="DSMovie-card-description">
+                            <h3>The Boys</h3>
+                            <a class="DSMovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="DSMovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/vfM7CdJ05vKRs4QjY1oIzWGTn1P.jpg" alt="Arcane">
+                        <div class="DSMovie-card-description">
+                            <h3>Arcane</h3>
+                            <a class="DSMovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="DSMovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/vGujlColp9TkLCOgkPr92azJlR8.jpg" alt="The Mandalorian">
+                        <div class="DSMovie-card-description">
+                            <h3>The Mandalorian</h3>
+                            <a class="DSMovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="DSMovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/hiK4qc0tZijQ9KNUnBIS1k4tdMJ.jpg" alt="Dr. House">
+                        <div class="DSMovie-card-description">
+                            <h3>Dr. House</h3>
+                            <a class="DSMovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
+                    <div class="DSMovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/dwMZ8BW1tUp69baogSrcTAumKuR.jpg" alt="O Mentalista">
+                        <div class="DSMovie-card-description">
+                            <h3>O Mentalista</h3>
+                            <a class="DSMovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
                 </div>
             </div>
+           
+
         </section>
     </main>
 
