--- a/index.html
+++ b/index.html
@@ -31,7 +31,18 @@
                         <img src="https://www.themoviedb.org/t/p/original/oa2gIzDwZ5weyZea5iXPLrQ7leN.jpg" alt="Vikings">
                         <div class="DSMovie-card-description">
                             <h3>Vikings</h3>
-                            <a class="DSMovie-btn" href="form.html">Avaliar</a>
+                            <div class="DSMovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star_full.svg" alt="Star">
+                                    <img src="img/star_full.svg" alt="Star">
+                                    <img src="img/star_full.svg" alt="Star">
+                                    <img src="img/star_half.svg" alt="Star">
+                                    <img src="img/star_empty.svg" alt="Star">
+                                </div>
+                                <p>10 Avaliações</p>
+                                <a class="DSMovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
