Polimento da Listagem

--- a/index.html
+++ b/index.html
@@ -51,7 +51,18 @@
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/wiE9doxiLwq3WCGamDIOb2PqBqc.jpg" alt="Peaky Blinders: Sangue, Apostas e Navalhas">
                         <div class="DSMovie-card-description">
                             <h3>Peaky Blinders: Sangue, Apostas e Navalhas</h3>
-                            <a class="DSMovie-btn" href="form.html">Avaliar</a>
+                            <div class="DSMovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star_full.svg" alt="Star">
+                                    <img src="img/star_full.svg" alt="Star">
+                                    <img src="img/star_full.svg" alt="Star">
+                                    <img src="img/star_half.svg" alt="Star">
+                                    <img src="img/star_empty.svg" alt="Star">
+                                </div>
+                                <p>10 Avaliações</p>
+                                <a class="DSMovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -60,7 +71,18 @@
                         <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/ccaZ3yyyC6rcMAQrlLZ51FpahNO.jpg" alt="Lucifer">
                         <div class="DSMovie-card-description">
                             <h3>Lucifer</h3>
-                            <a class="DSMovie-btn" href="form.html">Avaliar</a>
+                            <div class="DSMovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star_full.svg" alt="Star">
+                                    <img src="img/star_full.svg" alt="Star">
+                                    <img src="img/star_full.svg" alt="Star">
+                                    <img src="img/star_half.svg" alt="Star">
+                                    <img src="img/star_empty.svg" alt="Star">
+                                </div>
+                                <p>10 Avaliações</p>
+                                <a class="DSMovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -69,7 +91,18 @@
                         <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/aSYmp0TJW9Qvo6uoNjxyWYC4Xy4.jpg" alt="Suits">
                         <div class="DSMovie-card-description">
                             <h3>Suits: Homens de Terno</h3>
-                            <a class="DSMovie-btn" href="form.html">Avaliar</a>
+                            <div class="DSMovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star_full.svg" alt="Star">
+                                    <img src="img/star_full.svg" alt="Star">
+                                    <img src="img/star_full.svg" alt="Star">
+                                    <img src="img/star_half.svg" alt="Star">
+                                    <img src="img/star_empty.svg" alt="Star">
+                                </div>
+                                <p>10 Avaliações</p>
+                                <a class="DSMovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -78,7 +111,18 @@
                         <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/wbfg0y8Ptk472rLa9e3TTO9XVNh.jpg" alt="Breaking Bad">
                         <div class="DSMovie-card-description">
                             <h3>Breaking Bad: A Química do Mal</h3>
-                            <a class="DSMovie-btn" href="form.html">Avaliar</a>
+                            <div class="DSMovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star_full.svg" alt="Star">
+                                    <img src="img/star_full.svg" alt="Star">
+                                    <img src="img/star_full.svg" alt="Star">
+                                    <img src="img/star_half.svg" alt="Star">
+                                    <img src="img/star_empty.svg" alt="Star">
+                                </div>
+                                <p>10 Avaliações</p>
+                                <a class="DSMovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -87,7 +131,18 @@
                         <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/8SW0H1rF614O7NTAXZzoZ9BKBsB.jpg" alt="Jujutsu Kaisen">
                         <div class="DSMovie-card-description">
                             <h3>Jujutsu Kaisen</h3>
-                            <a class="DSMovie-btn" href="form.html">Avaliar</a>
+                            <div class="DSMovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star_full.svg" alt="Star">
+                                    <img src="img/star_full.svg" alt="Star">
+                                    <img src="img/star_full.svg" alt="Star">
+                                    <img src="img/star_half.svg" alt="Star">
+                                    <img src="img/star_empty.svg" alt="Star">
+                                </div>
+                                <p>10 Avaliações</p>
+                                <a class="DSMovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -96,7 +151,18 @@
                         <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/2j4T7JYorVX4oIknGsfis03NFE6.jpg" alt="Attack on Titan">
                         <div class="DSMovie-card-description">
                             <h3>Attack on Titan</h3>
-                            <a class="DSMovie-btn" href="form.html">Avaliar</a>
+                            <div class="DSMovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star_full.svg" alt="Star">
+                                    <img src="img/star_full.svg" alt="Star">
+                                    <img src="img/star_full.svg" alt="Star">
+                                    <img src="img/star_half.svg" alt="Star">
+                                    <img src="img/star_empty.svg" alt="Star">
+                                </div>
+                                <p>10 Avaliações</p>
+                                <a class="DSMovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -105,7 +171,18 @@
                         <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/mGVrXeIjyecj6TKmwPVpHlscEmw.jpg" alt="The Boys">
                         <div class="DSMovie-card-description">
                             <h3>The Boys</h3>
-                            <a class="DSMovie-btn" href="form.html">Avaliar</a>
+                            <div class="DSMovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star_full.svg" alt="Star">
+                                    <img src="img/star_full.svg" alt="Star">
+                                    <img src="img/star_full.svg" alt="Star">
+                                    <img src="img/star_half.svg" alt="Star">
+                                    <img src="img/star_empty.svg" alt="Star">
+                                </div>
+                                <p>10 Avaliações</p>
+                                <a class="DSMovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -114,7 +191,18 @@
                         <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/vfM7CdJ05vKRs4QjY1oIzWGTn1P.jpg" alt="Arcane">
                         <div class="DSMovie-card-description">
                             <h3>Arcane</h3>
-                            <a class="DSMovie-btn" href="form.html">Avaliar</a>
+                            <div class="DSMovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star_full.svg" alt="Star">
+                                    <img src="img/star_full.svg" alt="Star">
+                                    <img src="img/star_full.svg" alt="Star">
+                                    <img src="img/star_half.svg" alt="Star">
+                                    <img src="img/star_empty.svg" alt="Star">
+                                </div>
+                                <p>10 Avaliações</p>
+                                <a class="DSMovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -123,7 +211,18 @@
                         <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/vGujlColp9TkLCOgkPr92azJlR8.jpg" alt="The Mandalorian">
                         <div class="DSMovie-card-description">
                             <h3>The Mandalorian</h3>
-                            <a class="DSMovie-btn" href="form.html">Avaliar</a>
+                            <div class="DSMovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star_full.svg" alt="Star">
+                                    <img src="img/star_full.svg" alt="Star">
+                                    <img src="img/star_full.svg" alt="Star">
+                                    <img src="img/star_half.svg" alt="Star">
+                                    <img src="img/star_empty.svg" alt="Star">
+                                </div>
+                                <p>10 Avaliações</p>
+                                <a class="DSMovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -132,7 +231,18 @@
                         <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/hiK4qc0tZijQ9KNUnBIS1k4tdMJ.jpg" alt="Dr. House">
                         <div class="DSMovie-card-description">
                             <h3>Dr. House</h3>
-                            <a class="DSMovie-btn" href="form.html">Avaliar</a>
+                            <div class="DSMovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star_full.svg" alt="Star">
+                                    <img src="img/star_full.svg" alt="Star">
+                                    <img src="img/star_full.svg" alt="Star">
+                                    <img src="img/star_half.svg" alt="Star">
+                                    <img src="img/star_empty.svg" alt="Star">
+                                </div>
+                                <p>10 Avaliações</p>
+                                <a class="DSMovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -141,7 +251,18 @@
                         <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/dwMZ8BW1tUp69baogSrcTAumKuR.jpg" alt="O Mentalista">
                         <div class="DSMovie-card-description">
                             <h3>O Mentalista</h3>
-                            <a class="DSMovie-btn" href="form.html">Avaliar</a>
+                            <div class="DSMovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star_full.svg" alt="Star">
+                                    <img src="img/star_full.svg" alt="Star">
+                                    <img src="img/star_full.svg" alt="Star">
+                                    <img src="img/star_half.svg" alt="Star">
+                                    <img src="img/star_empty.svg" alt="Star">
+                                </div>
+                                <p>10 Avaliações</p>
+                                <a class="DSMovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
