Componente de Paginação

--- a/index.html
+++ b/index.html
@@ -24,7 +24,18 @@
     
     <main>
         <section id="DSMovie-card-list" class = "container">
-
+            <div class="DSMovie-pagination-container">
+                <div class="DSMovie-pagination-box">
+                    <button disabled>
+                        <img src="img/arrow.svg" alt="voltar">
+                    </button>
+                    <p>1 de 23</p>
+                    <button>
+                        <img class="dsmovie-flip-horizontal" src="img/arrow.svg" alt="proximo">
+                    </button>
+                </div>
+            </div>
+            
             <div class="row">
                 <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
                     <div class="DSMovie-card">
